--- a/www/templates/tabs/html/tabs.html
+++ b/www/templates/tabs/html/tabs.html
@@ -7,8 +7,8 @@
     <ion-nav-view name="tab-subjects"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab icon-on="add-subject-blue" icon-off="add-subject-grey" href="#/tab/addSubject-s1">
-    <ion-nav-view name="tab-addSubject"></ion-nav-view>
+  <ion-tab icon-on="add-subject-blue" icon-off="add-subject-grey" href="#/tab/match">
+    <ion-nav-view name="tab-match"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
