--- a/www/templates/login/html/login.html
+++ b/www/templates/login/html/login.html
@@ -21,8 +21,8 @@
 
 
       <div class="auth-container">
-        <input ng-if="!validPhone" class="phone-number" ng-model="auth.phoneNumber" type="number" placeholder="Phone Number">
-        <input ng-if="validPhone && !validSms" class="phone-number" ng-model="auth.smsCode" type="number" placeholder="sms code">
+        <input ng-if="!validPhone" class="phone-number" ng-model="auth.phoneNumber" type="tel" placeholder="Phone Number">
+        <input ng-if="validPhone && !validSms" class="phone-number" ng-model="auth.smsCode" type="tel" placeholder="sms code">
         <button ng-click="send()" class="button button-block button-positive send-button">
           <span>Send</span>
         </button>
