--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -945,3 +945,7 @@ input[type=search], input[type=text], input[type=password], input[type=datetime]
 .auth-container .send-button{
   height:40px;
 }
+
+.match-content .scroll{
+  height: 100% !important;
+}
