--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -949,3 +949,6 @@ input[type=search], input[type=text], input[type=password], input[type=datetime]
 .match-content .scroll{
   height: 100% !important;
 }
+.name-letter{
+  font-size: 50px;
+}
