--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10575,4 +10575,7 @@ input[type=search], input[type=text], input[type=password], input[type=datetime]
   height: 40px; }
 
 .match-content .scroll {
-  height: 100%; }
+  height: 100% !important; }
+
+.name-letter {
+  font-size: 50px; }
