--- a/www/templates/profile/html/myProfile.html
+++ b/www/templates/profile/html/myProfile.html
@@ -8,17 +8,17 @@
       <button class="button button-positive" ng-click="updateProfile()">
         Update Profile
       </button>
-      <div class="button-bar  profile-tabs">
-        <a ng-click="getSubjects('open')" class="button" ng-class="{'filter-clicked-button': tab=='open', 'filter-unclicked-button': tab!='open'}">
-          <span>Open</span>
-        </a>
-        <a ng-click="getSubjects('closed')" class="button" ng-class="{'filter-clicked-button': tab=='closed', 'filter-unclicked-button': tab!='closed'}">
-          <span>Closed</span>
-        </a>
-        <a ng-click="getSubjects('blocked')" class="button" ng-class="{'filter-clicked-button': tab=='blocked', 'filter-unclicked-button': tab!='blocked'}">
-          <span>Blocked</span>
-        </a>
-      </div>
+      <!--<div class="button-bar  profile-tabs">-->
+        <!--<a ng-click="getSubjects('open')" class="button" ng-class="{'filter-clicked-button': tab=='open', 'filter-unclicked-button': tab!='open'}">-->
+          <!--<span>Open</span>-->
+        <!--</a>-->
+        <!--<a ng-click="getSubjects('closed')" class="button" ng-class="{'filter-clicked-button': tab=='closed', 'filter-unclicked-button': tab!='closed'}">-->
+          <!--<span>Closed</span>-->
+        <!--</a>-->
+        <!--<a ng-click="getSubjects('blocked')" class="button" ng-class="{'filter-clicked-button': tab=='blocked', 'filter-unclicked-button': tab!='blocked'}">-->
+          <!--<span>Blocked</span>-->
+        <!--</a>-->
+      <!--</div>-->
     </div>
 
   </div>
